# goit-ds-hw-03

task_1/: app_odm.py  pyproject.toml
task_2/: bs4_find_quotes.py  bs4_select_quotes.py  main.py  pyproject.toml
